A new era of D-A in Baseball

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
 	"cSpell.words": [
+		"colorbar",
 		"Eddard",
 		"evol",
 		"fnames",
+		"Giancarlo",
 		"Lannister",
 		"pagerank",
+		"Statcast",
 		"Tyrion"
 	]
 }
