Analyze Your Runkeeper fitness Data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,14 @@
 		"evol",
 		"fnames",
 		"Giancarlo",
+		"groupby",
 		"Lannister",
 		"Malala",
 		"pagerank",
+		"runkeeper",
 		"Statcast",
+		"statsmodels",
+		"subsetting",
 		"Tyrion"
 	]
 }
