Book recomendations frm Charles Darwin *pickle ish

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,15 @@
 		"Lannister",
 		"LIII",
 		"Malala",
+		"Originof",
 		"pagerank",
 		"runkeeper",
+		"speci",
 		"Statcast",
 		"statsmodels",
+		"stoplist",
 		"subsetting",
+		"txts",
 		"Tyrion"
 	]
 }
