Comparing Cosmetics by Ingredients

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
 	"cSpell.words": [
 		"acousticness",
+		"aleate",
+		"Amore",
 		"barplot",
 		"colorbar",
 		"danceability",
 		"datacamp",
 		"dataframes",
+		"decyl",
 		"echonest",
 		"Eddard",
 		"evol",
@@ -13,6 +16,7 @@
 		"Giancarlo",
 		"groupby",
 		"idxs",
+		"LANEIGE's",
 		"Lannister",
 		"LIII",
 		"Malala",
@@ -20,6 +24,7 @@
 		"overfitting",
 		"pagerank",
 		"runkeeper",
+		"Sephora",
 		"sklearn",
 		"speci",
 		"Statcast",
