Comparing Search interest with Google Trends

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,10 @@
 		"Giancarlo",
 		"groupby",
 		"idxs",
+		"Jenners",
+		"Kardashians",
+		"Khloé",
+		"kolumns",
 		"LANEIGE's",
 		"Lannister",
 		"LIII",
@@ -30,6 +34,7 @@
 		"Statcast",
 		"statsmodels",
 		"stoplist",
+		"Stormi",
 		"subsetting",
 		"txts",
 		"Tyrion"
