Disney movies and Box office success

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"aleate",
 		"Amore",
 		"barplot",
+		"coef",
 		"colorbar",
 		"danceability",
 		"datacamp",
@@ -16,6 +17,7 @@
 		"Giancarlo",
 		"groupby",
 		"idxs",
+		"inds",
 		"Jenners",
 		"Kardashians",
 		"Khloé",
@@ -24,6 +26,7 @@
 		"Lannister",
 		"LIII",
 		"Malala",
+		"MPAA",
 		"Originof",
 		"overfitting",
 		"pagerank",
