Do left-handed People really die young

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
 		"kolumns",
 		"LANEIGE's",
 		"Lannister",
+		"lefthanded",
 		"LIII",
 		"Malala",
 		"MPAA",
@@ -43,6 +44,7 @@
 		"subsetting",
 		"txts",
 		"Tyrion",
+		"Wysocki",
 		"zumba"
 	]
 }
