Dr. Semmelweis and the discovery of handwashing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
 		"Giancarlo",
 		"groupby",
 		"idxs",
+		"Ignaz",
 		"inds",
 		"Jenners",
 		"Kardashians",
@@ -34,6 +35,7 @@
 		"pdays",
 		"poutcome",
 		"runkeeper",
+		"Semmelweis",
 		"Sephora",
 		"sklearn",
 		"speci",
