Exploring the Bitcoin Cryptocurrency market

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,36 +3,48 @@
 		"acousticness",
 		"aleate",
 		"Amore",
+		"barchart",
 		"barplot",
+		"capcount",
 		"coef",
 		"colorbar",
 		"danceability",
+		"darkred",
 		"datacamp",
 		"dataframes",
 		"decyl",
+		"DTITLE",
 		"echonest",
 		"Eddard",
 		"evol",
+		"fivethirtyeight",
 		"fnames",
 		"Giancarlo",
 		"groupby",
 		"idxs",
 		"Ignaz",
 		"inds",
+		"Investopedia",
+		"Investopedia's",
 		"Jenners",
 		"Kardashians",
 		"Khloé",
 		"kolumns",
 		"LANEIGE's",
 		"Lannister",
+		"largecaps",
 		"lefthanded",
 		"LIII",
+		"Litecoin",
 		"Malala",
+		"marketcaps",
+		"Monero",
 		"MPAA",
 		"Originof",
 		"overfitting",
 		"pagerank",
 		"pdays",
+		"perc",
 		"poutcome",
 		"runkeeper",
 		"Semmelweis",
@@ -46,6 +58,7 @@
 		"subsetting",
 		"txts",
 		"Tyrion",
+		"WTITLE",
 		"Wysocki",
 		"zumba"
 	]
