Exploring the history of Lego

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
 		"fivethirtyeight",
 		"fnames",
 		"Giancarlo",
+		"godt",
 		"groupby",
 		"idxs",
 		"Ignaz",
@@ -46,6 +47,7 @@
 		"pdays",
 		"perc",
 		"poutcome",
+		"Rebrickable",
 		"runkeeper",
 		"Semmelweis",
 		"Sephora",
