Exploring the NYC Airbnb Market

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
 		"marketcaps",
 		"Monero",
 		"MPAA",
+		"nbhood",
 		"Originof",
 		"overfitting",
 		"pagerank",
@@ -58,10 +59,12 @@
 		"stoplist",
 		"Stormi",
 		"subsetting",
+		"timeframe",
 		"txts",
 		"Tyrion",
 		"WTITLE",
 		"Wysocki",
-		"zumba"
+		"zumba",
+		"Zumper"
 	]
 }
