Extract Stock Sentiment from News Headlines

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
 		"echonest",
 		"Eddard",
 		"evol",
+		"FINVIZ",
 		"fivethirtyeight",
 		"fnames",
 		"Giancarlo",
@@ -57,11 +58,15 @@
 		"Statcast",
 		"statsmodels",
 		"stoplist",
+		"stopwords",
 		"Stormi",
+		"subscores",
 		"subsetting",
 		"timeframe",
+		"tsla",
 		"txts",
 		"Tyrion",
+		"webdev",
 		"WTITLE",
 		"Wysocki",
 		"zumba",
