Find movie similarity from plot summaries

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
 		"groupby",
 		"idxs",
 		"Ignaz",
+		"imdb",
 		"inds",
 		"Investopedia",
 		"Investopedia's",
@@ -38,17 +39,22 @@
 		"lefthanded",
 		"LIII",
 		"Litecoin",
+		"Longshanks",
 		"Malala",
 		"marketcaps",
+		"mergings",
 		"Monero",
 		"MPAA",
 		"nbhood",
+		"ngrams",
+		"onli",
 		"Originof",
 		"overfitting",
 		"pagerank",
 		"pdays",
 		"perc",
 		"poutcome",
+		"punkt",
 		"Rebrickable",
 		"runkeeper",
 		"Semmelweis",
@@ -66,6 +72,7 @@
 		"tsla",
 		"txts",
 		"Tyrion",
+		"Vectorizer",
 		"webdev",
 		"WTITLE",
 		"Wysocki",
