Give life: Predict blood donations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,9 @@
 		"poutcome",
 		"punkt",
 		"Rebrickable",
+		"RFMTC",
 		"runkeeper",
+		"scikit",
 		"Semmelweis",
 		"Sephora",
 		"sklearn",
@@ -69,6 +71,7 @@
 		"subscores",
 		"subsetting",
 		"timeframe",
+		"TPOT",
 		"tsla",
 		"txts",
 		"Tyrion",
