Mobile Games A B testing with cookie cats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
 		"FINVIZ",
 		"fivethirtyeight",
 		"fnames",
+		"gamerounds",
 		"Giancarlo",
 		"godt",
 		"groupby",
@@ -55,6 +56,7 @@
 		"pagerank",
 		"pdays",
 		"perc",
+		"Ploting",
 		"poutcome",
 		"punkt",
 		"Rebrickable",
@@ -78,6 +80,7 @@
 		"tsla",
 		"txts",
 		"Tyrion",
+		"userid",
 		"Vectorizer",
 		"webdev",
 		"WTITLE",
