Naive Bees: Deep learning wth images *Corrupt data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,12 @@
 		"Amore",
 		"barchart",
 		"barplot",
+		"Bombus",
 		"capcount",
+		"Cheatsheet",
 		"coef",
 		"colorbar",
+		"Conv",
 		"danceability",
 		"darkred",
 		"datacamp",
@@ -28,6 +31,7 @@
 		"idxs",
 		"Ignaz",
 		"imdb",
+		"imread",
 		"inds",
 		"Investopedia",
 		"Investopedia's",
@@ -58,6 +62,7 @@
 		"perc",
 		"Ploting",
 		"poutcome",
+		"pretrained",
 		"punkt",
 		"Rebrickable",
 		"redpopcorn",
@@ -66,6 +71,7 @@
 		"scikit",
 		"Semmelweis",
 		"Sephora",
+		"skimage",
 		"sklearn",
 		"speci",
 		"Statcast",
