Name Game: Gender Prediction using Sound *C++ 14.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
 		"acousticness",
 		"aleate",
 		"Amore",
+		"babynames",
+		"babynysiis",
 		"barchart",
 		"barplot",
 		"Bombus",
@@ -22,6 +24,7 @@
 		"Eddard",
 		"evol",
 		"FINVIZ",
+		"firstnames",
 		"fivethirtyeight",
 		"fnames",
 		"gamerounds",
@@ -33,6 +36,7 @@
 		"Ignaz",
 		"imdb",
 		"imread",
+		"inbetweeners",
 		"inds",
 		"Investopedia",
 		"Investopedia's",
@@ -56,6 +60,8 @@
 		"MPAA",
 		"nbhood",
 		"ngrams",
+		"nloc",
+		"nytkids",
 		"onli",
 		"Originof",
 		"overfitting",
