Real-time insights from social media data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 		"babynysiis",
 		"barchart",
 		"barplot",
+		"Berat",
 		"Bombus",
 		"capcount",
 		"Cheatsheet",
@@ -23,6 +24,7 @@
 		"echonest",
 		"Eddard",
 		"evol",
+		"favoritecount",
 		"FINVIZ",
 		"firstnames",
 		"fivethirtyeight",
@@ -42,6 +44,7 @@
 		"Investopedia",
 		"Investopedia's",
 		"Jenners",
+		"Kandili",
 		"Kardashians",
 		"Khloé",
 		"kolumns",
@@ -93,6 +96,7 @@
 		"timeframe",
 		"TPOT",
 		"tsla",
+		"Twitteratis",
 		"txts",
 		"Tyrion",
 		"userid",
