Recreating John Snow's ghost map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
 		"barplot",
 		"Berat",
 		"Bombus",
+		"Broadwick",
 		"capcount",
 		"Cheatsheet",
 		"coef",
@@ -62,9 +63,12 @@
 		"mergings",
 		"Monero",
 		"MPAA",
+		"mythified",
 		"nbhood",
+		"newcols",
 		"ngrams",
 		"nloc",
+		"nonselection",
 		"nytkids",
 		"onli",
 		"Originof",
