Reducing traffic mortality in the USA

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
 		"barchart",
 		"barplot",
 		"Berat",
+		"bmiles",
 		"Bombus",
 		"Broadwick",
 		"capcount",
@@ -21,10 +22,12 @@
 		"dataframes",
 		"datapoints",
 		"decyl",
+		"drvr",
 		"DTITLE",
 		"echonest",
 		"Eddard",
 		"evol",
+		"fatl",
 		"favoritecount",
 		"FINVIZ",
 		"firstnames",
