The android app market on google play

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
 		"Conv",
 		"danceability",
 		"darkred",
+		"dashdot",
 		"datacamp",
 		"dataframes",
 		"datapoints",
@@ -78,6 +79,7 @@
 		"Originof",
 		"overfitting",
 		"pagerank",
+		"paymium",
 		"pdays",
 		"perc",
 		"Ploting",
