The hottest topics in machine learning

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
 		"bmiles",
 		"Bombus",
 		"Broadwick",
+		"businessesandnew",
 		"capcount",
 		"CAPM",
 		"Cheatsheet",
@@ -40,6 +41,7 @@
 		"godt",
 		"grayscale",
 		"groupby",
+		"Gumi",
 		"hyperparameters",
 		"idxs",
 		"Ignaz",
@@ -54,6 +56,8 @@
 		"Kardashians",
 		"Khloé",
 		"kolumns",
+		"Kongō",
+		"Kulinarium",
 		"LANEIGE's",
 		"Lannister",
 		"largecaps",
@@ -66,6 +70,8 @@
 		"marketcaps",
 		"matploblib",
 		"mergings",
+		"México",
+		"Moneda",
 		"Monero",
 		"MPAA",
 		"mythified",
@@ -96,8 +102,10 @@
 		"skimage",
 		"sklearn",
 		"speci",
+		"Staffelter",
 		"Statcast",
 		"statsmodels",
+		"Stifts",
 		"stoplist",
 		"stopwords",
 		"Stormi",
@@ -110,6 +118,7 @@
 		"txts",
 		"Tyrion",
 		"userid",
+		"varchar",
 		"Vectorizer",
 		"webdev",
 		"WTITLE",
