Who is drunk and when in Ames, Iowa

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
 		"Berat",
 		"bmiles",
 		"Bombus",
+		"boxplots",
 		"Broadwick",
 		"businessesandnew",
 		"capcount",
@@ -61,6 +62,7 @@
 		"LANEIGE's",
 		"Lannister",
 		"largecaps",
+		"Leath",
 		"lefthand",
 		"lefthanded",
 		"LIII",
@@ -121,6 +123,7 @@
 		"userid",
 		"varchar",
 		"Vectorizer",
+		"VEISHEA",
 		"webdev",
 		"WTITLE",
 		"Wysocki",
