Who's tweeting: Trump or Trudeau

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,7 @@
 		"timeframe",
 		"TPOT",
 		"tsla",
+		"tweepy",
 		"Twitteratis",
 		"txts",
 		"Tyrion",
@@ -123,6 +124,7 @@
 		"userid",
 		"varchar",
 		"Vectorizer",
+		"vectorizers",
 		"VEISHEA",
 		"webdev",
 		"WTITLE",
