Writing functions for product analysis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
 		"dataframes",
 		"datapoints",
 		"decyl",
+		"docstrings",
 		"drvr",
 		"DTITLE",
 		"echonest",
@@ -83,6 +84,7 @@
 		"ngrams",
 		"nloc",
 		"nonselection",
+		"Numpydoc",
 		"nytkids",
 		"onli",
 		"Originof",
@@ -94,6 +96,7 @@
 		"Ploting",
 		"poutcome",
 		"pretrained",
+		"Promotor",
 		"punkt",
 		"Rebrickable",
 		"redpopcorn",
